# checkcert

./: CMakeLists.txt  README.md  conanfile.py
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/data/: Michal.pem  show_cert.sh  show_enddate.sh  show_startdate.sh
